@@ -1,13 +1,19 @@
 package com.sparta.lafesta.festival.service;
 
+
 import com.sparta.lafesta.common.exception.UnauthorizedException;
+import com.sparta.lafesta.common.s3.S3UploadService;
+import com.sparta.lafesta.common.s3.entity.FestivalFileOnS3;
+import com.sparta.lafesta.common.s3.entity.FileOnS3;
+import com.sparta.lafesta.common.s3.repository.FestivalFileRepository;
 import com.sparta.lafesta.festival.dto.FestivalRequestDto;
 import com.sparta.lafesta.festival.dto.FestivalResponseDto;
 import com.sparta.lafesta.festival.entity.Festival;
 import com.sparta.lafesta.festival.repository.FestivalRepository;
 import com.sparta.lafesta.like.festivalLike.entity.FestivalLike;
 import com.sparta.lafesta.like.festivalLike.repository.FestivalLikeRepository;
-import com.sparta.lafesta.notification.dto.FestivalReminderResponseDto;
+import com.sparta.lafesta.notification.dto.ReminderDto;
+import com.sparta.lafesta.notification.entity.FestivalReminderType;
 import com.sparta.lafesta.user.entity.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,34 +21,59 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class FestivalServiceImpl implements FestivalService {
+    //CRUD
     private final FestivalRepository festivalRepository;
+
+    //S3
+    private final S3UploadService s3UploadService;
+    private final FestivalFileRepository festivalFileRepository;
+    private final String FESTIVAL_FOLDER_NAME = "festival";
+
+    //Like
     private final FestivalLikeRepository festivalLikeRepository;
+
     @Autowired
     private TransactionTemplate transactionTemplate;
+
+
 
     // 페스티벌 등록
     @Override
     @Transactional
-    public FestivalResponseDto createFestival(FestivalRequestDto requestDto, User user) {
+    public FestivalResponseDto createFestival(FestivalRequestDto requestDto, List<MultipartFile> files, User user) throws IOException {
+
         // 허가되지 않은 주최사, 일반 사용자 접근 시 예외처리
         if (user.getRole().getAuthority().equals("ROLE_USER")) {
             throw new UnauthorizedException("해당 요청에 접근할 수 없습니다.");
         }
         Festival festival = new Festival(requestDto, user);
+
+        //festival DB 저장
         festivalRepository.save(festival);
+
+        // 첨부파일업로드 -> 이후 업로드된 파일의 url주소를 festival객체에 담아줄 예정.
+        if (files != null) {
+            uploadFiles(files, festival);
+        }
+
         return new FestivalResponseDto(festival);
     }
+
 
     // 페스티벌 전체 조회
     @Override
@@ -52,6 +83,7 @@ public class FestivalServiceImpl implements FestivalService {
                 .map(FestivalResponseDto::new).collect(Collectors.toList());
     }
 
+
     // 페스티벌 상세 조회
     @Override
     @Transactional(readOnly = true)
@@ -60,10 +92,11 @@ public class FestivalServiceImpl implements FestivalService {
         return new FestivalResponseDto(findFestival(festivalId));
     }
 
+
     // 페스티벌 내용 수정
     @Override
     @Transactional
-    public FestivalResponseDto modifyFestival(Long festivalId, FestivalRequestDto requestDto, User user) {
+    public FestivalResponseDto modifyFestival(Long festivalId, FestivalRequestDto requestDto, List<MultipartFile> files, User user) throws IOException {
         Festival festival = findFestival(festivalId);
 
         // 주최사는 본인이 작성한 글만 수정 가능
@@ -76,9 +109,16 @@ public class FestivalServiceImpl implements FestivalService {
             throw new UnauthorizedException("주최사가 작성한 글은 관리자 권한으로 수정할 수 없습니다.");
         }
 
+        //첨부파일 변경
+        if (files != null) {
+            modifyFiles(festival, files);
+        }
+        //페스티벌 정보 변경
         festival.modify(requestDto);
+
         return new FestivalResponseDto(festival);
     }
+
 
     // 페스티벌 삭제
     @Override
@@ -92,8 +132,12 @@ public class FestivalServiceImpl implements FestivalService {
             throw new UnauthorizedException("해당 요청에 접근할 수 없습니다.");
         }
 
+        //첨부파일  DB에서 삭제
+        deleteFiles(festival);
+
         festivalRepository.delete(festival);
     }
+
 
     // 페스티벌 좋아요 추가
     @Override
@@ -144,10 +188,10 @@ public class FestivalServiceImpl implements FestivalService {
         return response;
     }
 
-    // 알림을 보낼 페스티벌 가져오기
+    // 페스티벌 오픈 알림을 보낼 페스티벌 가져오기
     @Override
     @Transactional(readOnly = true)
-    public List<FestivalReminderResponseDto> getFestivalReminders() {
+    public List<ReminderDto> getFestivalOpenReminders() {
         // 페스티벌 개최 당일, 1일 전, 7일 전 발송
         LocalDate today = LocalDate.now();
         LocalDate tomorrow = today.plusDays(1);
@@ -155,16 +199,58 @@ public class FestivalServiceImpl implements FestivalService {
 
         List<LocalDate> dateRanges = Arrays.asList(today, tomorrow, sevenDaysAfter);
 
-        List<Festival> reminderFestivals = dateRanges.stream()
+        return getReminders(dateRanges, FestivalReminderType.FESTIVAL_OPEN);
+    }
+
+    // 페스티벌 예매 오픈 알림을 보낼 페스티벌 가져오기
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReminderDto> getReservationOpenReminders() {
+        // 페스티벌 예매 오픈 당일, 1일 전 발송
+        LocalDate today = LocalDate.now();
+        LocalDate tomorrow = today.plusDays(1);
+
+        List<LocalDate> dateRanges = Arrays.asList(today, tomorrow);
+
+        return getReminders(dateRanges, FestivalReminderType.RESERVATION_OPEN);
+    }
+
+    // 페스티벌 리뷰 독려 알림을 보낼 페스티벌 가져오기
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReminderDto> getReviewEncouragementReminders() {
+        // 페스티벌 종료 1일 후 발송
+        LocalDate today = LocalDate.now();
+        LocalDate yesterday = today.minusDays(1);
+
+        List<LocalDate> dateRanges = List.of(yesterday);
+
+        return getReminders(dateRanges, FestivalReminderType.REVIEW_ENCOURAGEMENT);
+    }
+
+    // 알림을 보낼 페스티벌 가져오기
+    private List<ReminderDto> getReminders(List<LocalDate> dateRanges, FestivalReminderType type) {
+        List<Festival> reminders = dateRanges.stream()
                 .map(date -> {
                     LocalDateTime startOfDay = date.atStartOfDay();
                     LocalDateTime endOfDay = date.atTime(LocalTime.MAX);
-                    return festivalRepository.findAllByOpenDateBetween(startOfDay, endOfDay);
+                    Stream<Festival> festivalStream;
+                    if (type == FestivalReminderType.FESTIVAL_OPEN) {
+                        festivalStream = festivalRepository.findAllByOpenDateBetween(startOfDay, endOfDay).stream();
+                    } else if (type == FestivalReminderType.RESERVATION_OPEN) {
+                        festivalStream = festivalRepository.findAllByReservationOpenDateBetween(startOfDay, endOfDay).stream();
+                    } else if (type == FestivalReminderType.REVIEW_ENCOURAGEMENT) {
+                        festivalStream = festivalRepository.findAllByEndDateBetween(startOfDay, endOfDay).stream();
+                    } else {
+                        festivalStream = Stream.empty();
+                    }
+                    return festivalStream.collect(Collectors.toList());
                 })
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
 
-        return reminderFestivals.stream().map(FestivalReminderResponseDto::new).toList();
+        return reminders.stream()
+                .map(festival -> new ReminderDto(festival, type)).toList();
     }
 
     // 페스티벌 id로 페스티벌 찾기
@@ -173,6 +259,46 @@ public class FestivalServiceImpl implements FestivalService {
                 new IllegalArgumentException("선택한 페스티벌은 존재하지 않습니다.")
         );
     }
+
+
+    private void uploadFiles(List<MultipartFile> files, Festival festival) throws IOException {
+        List<FileOnS3> fileOnS3s = new ArrayList<>();
+        if (files != null) {
+            fileOnS3s = s3UploadService.putObjects(files, FESTIVAL_FOLDER_NAME, festival.getId());
+        }
+
+        // FielOnS3를 Festival로 변환
+        for (FileOnS3 fileOnS3 : fileOnS3s) {
+            //페스티벌 파일 S3 엔티티로 변환생성
+            FestivalFileOnS3 festivalFileOnS3 = new FestivalFileOnS3(fileOnS3);
+            //S3 엔티티에 페스티벌 연관관계 설정
+            festivalFileOnS3.setFestival(festival);
+            //DB저장
+            festivalFileRepository.save(festivalFileOnS3);
+        }
+    }
+
+    private void deleteFiles(Festival festival) {
+        // 파일정보 불러오기
+        List<FestivalFileOnS3> fileOnS3s = festival.getFestivalFileOnS3s();
+
+        // 파일 삭제 실행
+        if (!fileOnS3s.isEmpty()) { // 파일이 있다면 실행
+            for (FestivalFileOnS3 fileOnS3 : fileOnS3s) {
+                s3UploadService.deleteFile(fileOnS3.getKeyName());
+            }
+        }
+    }
+
+    private void modifyFiles(Festival festival, List<MultipartFile> files) throws IOException {
+
+        // 기존 파일 삭제
+        deleteFiles(festival);
+
+        // 파일 등록
+        uploadFiles(files, festival);
+    }
+
 
     // 페스티벌과 사용자로 좋아요 찾기
     private FestivalLike findFestivalLike(User user, Festival festival) {
